[project]
name = "yt-skill"
version = "0.1.0"
description = "Learn skills from YouTube videos for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.47.0",
    "yt-dlp>=2024.0.0",
]

[project.scripts]
yt-skill = "yt_skill.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
